--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,11 +8,11 @@
     <div class="container mx-auto">
         <h1 class="text-center my-14 text-3xl font-extrabold leading-none tracking-tight text-blue-400 md:text-5xl lg:text-6xl dark:text-white">URL Shortner</h1>
         <div class="text-center mb-10 w-full max-w-auto p-4 bg-white border border-gray-200 rounded-lg shadow sm:p-6 md:p-8 dark:bg-gray-800 dark:border-gray-700">
-            <form class="space-y-6" method="post" action="/">
+            <form id="shortner_url_form" class="space-y-6" method="post" action="/">
                 <h5 class="text-xl font-medium text-gray-900 dark:text-white">Paste the URL to be shortened</h5>
                 <div class="w-full max-w-auto min-w-[200px]">
                     <div class="relative">
-                        <input type="url" name="url" class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pl-3 pr-16 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow" placeholder="Enter the link here (https://example.com)" />
+                        <input type="url" id="ogurl" name="url" class="w-full bg-transparent placeholder:text-slate-400 text-slate-700 text-sm border border-slate-200 rounded-md pl-3 pr-16 py-2 transition duration-300 ease focus:outline-none focus:border-slate-400 hover:border-slate-300 shadow-sm focus:shadow" placeholder="Enter the link here (https://example.com)" />
                         <button type="submit" class="absolute right-1 top-1 rounded bg-slate-800 py-1 px-2.5 border border-transparent text-center text-sm text-white transition-all shadow-sm hover:shadow focus:bg-slate-700 focus:shadow-none active:bg-slate-700 hover:bg-slate-700 active:shadow-none disabled:pointer-events-none disabled:opacity-50 disabled:shadow-none" type="button">
                             Short URL
                         </button>
@@ -25,7 +25,7 @@
                                 <span class="font-semibold mr-2 text-left flex-auto"><%= locals.shortLink %></span>
                               </a>
                               <!-- <svg class="fill-current opacity-75 h-4 w-4" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20"><path d="M12.95 10.707l.707-.707L8 4.343 6.586 5.757 10.828 10l-4.242 4.243L8 15.657l4.95-4.95z"/></svg> -->
-                              <svg onClick="show()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy cursor-pointer" viewBox="0 0 16 16">
+                              <svg onClick="clickToCopy()" xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-copy cursor-pointer" viewBox="0 0 16 16">
                                 <path fill-rule="evenodd" d="M4 2a2 2 0 0 1 2-2h8a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H6a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1V2a1 1 0 0 0-1-1zM2 5a1 1 0 0 0-1 1v8a1 1 0 0 0 1 1h8a1 1 0 0 0 1-1v-1h1v1a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V6a2 2 0 0 1 2-2h1v1z"/>
                               </svg>
                             </div>
@@ -49,7 +49,11 @@
     </div>
   </body>
   <script>
-    const show = () => {
+    // let status = document.getElementById('shortner_url_form').reset();
+    console.log(' => ', document.getElementById("ogurl").value);
+    
+    const clickToCopy = () => {
+      document.getElementById("ogurl").value = '';
       const textToCopy = document.getElementById("shorten_url").href;
       console.log('textToCopy => ', textToCopy);
       if (navigator.clipboard && navigator.clipboard.writeText) {
